[CSS - 2.4] - Changed box-sizing

--- a/Topic-0/CSS-Basics/css/style.css
+++ b/Topic-0/CSS-Basics/css/style.css
@@ -69,6 +69,15 @@
     background-color: #333;
 }
 
+.container,
+.header,
+.navigation,
+.content > *,
+.sidebar,
+.footer {
+    box-sizing: border-box;
+}
+
 /* 
 ================================================
                  TYPOGRAPHY
