--- a/Topic-1/css/style.css
+++ b/Topic-1/css/style.css
@@ -6,10 +6,19 @@
 
 section {
     text-align: center;
+    transition: opacity 2s;
+    -webkit-transition: opacity 2s;
+    -moz-transition: opacity 2s;
+    -ms-transition: opacity 2s;
+    -o-transition: opacity 2s;
 }
 
 .hidden {
-     display: none;
+    opacity: 0;
+}
+
+.show {
+    opacity: 1;
 }
 
 .error {
