--- a/Topic-1/css/style.css
+++ b/Topic-1/css/style.css
@@ -1,7 +1,17 @@
-.container{
-    width: 960px;
-    margin: 0 auto;
+.container {
+    width: 100%;
     position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.repos-list {
+    list-style-type: none;
+}
+
+.git-repos-container {
+    width: 500px;
 }
 
 section {
