Module_4 - 2.* - Added drag and drop support

--- a/Topic-4/css/styles.css
+++ b/Topic-4/css/styles.css
@@ -44,3 +44,7 @@
     animation: fade-in-out 6s alternate ease-in-out;
     -webkit-animation: fade-in-out 6s alternate ease-in-out;
 }
+
+.hover {
+    background: #eee
+}
