Module_4 - 4.* - Added SVG Shape

--- a/Topic-4/css/styles.css
+++ b/Topic-4/css/styles.css
@@ -52,3 +52,13 @@
 .error {
     color: #e00;
 }
+
+svg rect {
+    fill:rgb(0,0,255);
+    stroke-width:3;
+    stroke:rgb(0,0,0);
+}
+
+.webSocket-info-container {
+    height: 80px;
+}
